--- a/DX11 Framework.vcxproj.filters
+++ b/DX11 Framework.vcxproj.filters
@@ -22,6 +22,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Commons.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameObjectPrimitives.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
@@ -33,6 +34,7 @@
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameObjectPrimitives.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
