Commit to remote

--- a/DX11 Framework.vcxproj
+++ b/DX11 Framework.vcxproj
@@ -379,6 +379,9 @@
     <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="DX11 Framework.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameObjectDirectionalLight.cpp" />
+    <ClCompile Include="GameObjectLight.cpp" />
+    <ClCompile Include="GameObjectPointLight.cpp" />
     <ClCompile Include="GameObjectPrimitives.cpp" />
     <ClCompile Include="GUIManager.cpp" />
     <ClCompile Include="InputManager.cpp" />
@@ -395,6 +398,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="DX11 Framework.fx" />
+    <None Include="DXframework.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -402,10 +406,12 @@
     <ClInclude Include="Commons.h" />
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameObjectDirectionalLight.h" />
+    <ClInclude Include="GameObjectLight.h" />
+    <ClInclude Include="GameObjectPointLight.h" />
     <ClInclude Include="GameObjectPrimitives.h" />
     <ClInclude Include="GUIManager.h" />
     <ClInclude Include="InputManager.h" />
-    <ClInclude Include="LightHelper.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="rapidxml.hpp" />
